fix build and rm unused files